# Logic-Simulator

./: CMakeLists.txt  LICENSE  LogicSimulatorTest.sim  README.md
include/: Gate.h  Node.h  Simulator.h
src/: CMakeLists.txt  Gate.cpp  Node.cpp  Simulator.cpp  main.cpp
